# Trajectory_Causal_Attribution

./: .gitignore  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
.hypothesis/constants/: 000cf5cf6330f4a0  00278c73a1fb6657  0029e3685988a9e1  0036c3f9aeac6cb9  004e722d2b39195a  00630cd27d97a125  006b559781a41f7f  007f8973df16ca04  009f7a1122aa4f57  00a7db4b8c1be0a8  00c4d5dfcfae19ff  00d891e42d8de2ce  00e4f8b4ba2c0c3c  0180106be49769ed  0180d0179b1e0750  0197044b02bf2247  01b37d00ecc524be  01c067336e9c0e8e  01e17e88cee170ff  01e91be26a4be424  01fe51a0aecbe035  020bd4b9cc3144b7  022b47d95bfe9593  022d71bfc30b1c15  023864936204a5b3  023ead4174192126  023fd3eed642bd97  024e19344a4e5ec2  024e321b80819552  025f33b444b9e21b  025fa85cdf6aea07  0275d5642dedd530  02821e313afc042f  0285abaafb5f0736  0287fba9034fe177  028c23fc118c56c3  02aa8a0079b29a8e  02b9dbfddea46cd5  02dbebd937cac586  02eceb2fd2d826c2  (+3348 more)
benchmarks/: README.md  whowhen.py
docs/: ANALYSIS.md  HANDOFF.md  MULTIVERSE_GAPS.md  RESEARCH_NOTES.md  architecture.md  frameworks.md
examples/: connect_any_framework.py  quickstart.py  test_agent_with_pytest.py
huggingface/: PUSH.md  README.md  app.py  requirements.txt
src/agent_replay/: __init__.py  _ambient.py  ablation.py  aggregate.py  analyze.py  attribution.py  cli.py  drift.py  errors.py  explain.py  faithfulness.py  hashing.py  instrument.py  interop.py  mock_agent.py  multiverse.py  pytest_plugin.py  recorder.py  repair.py  replayer.py  report.py  serve.py  session.py  stats.py  store.py  types.py
src/agent_replay/adapters/: __init__.py  langchain.py  openai_sdk.py
tests/: _demo_agent.py  conftest.py  test_ablation.py  test_action_observation.py  test_adaptive.py  test_aggregate.py  test_async.py  test_attribution.py  test_benchmark.py  test_branching.py  test_cache.py  test_cli.py  test_drift.py  test_end_to_end.py  test_explain.py  test_faithfulness.py  test_instrument.py  test_interop.py  test_multiverse.py  test_openai_adapter.py  test_properties.py  test_pytest_plugin.py  test_recorder.py  test_repair.py  test_repair_v2.py  test_replayer.py  test_report.py  test_serve.py  test_soundness.py  test_stats.py  test_store.py  test_synthetic_scm.py  test_virtual_time.py
